--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,7 @@
 [core]
   editor = vim -c \"set fenc=utf-8\"
   excludesfile = /Users/banaoh/.gitignore_global
+	autocrlf = input
 [user]
   name = Kengo Obana
   email = aoyama.banaoh@gmail.com
